# atomic-settle

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: contracts.yml  dashboard.yml  orchestrator.yml
contracts/compliance-gate/: Cargo.toml
contracts/compliance-gate/src/: lib.rs  test.rs
contracts/settlement-escrow/: Cargo.toml
contracts/settlement-escrow/src/: lib.rs  test.rs
docs/architecture-decisions/: 0001-soroban-as-settlement-layer.md  0002-decoupled-compliance-gate.md  0003-permissionless-settle-and-refund.md
ops-dashboard/: angular.json  package-lock.json  package.json
ops-dashboard/src/: index.html  styles.css
ops-dashboard/src/app/: app.routes.ts
ops-dashboard/src/app/models/: trade.ts
ops-dashboard/src/app/services/: api.service.ts  stellar.service.ts  websocket.service.ts
orchestrator/: .env.example  package-lock.json  package.json
orchestrator/src/: app.module.ts  database.module.ts  main.ts
orchestrator/src/compliance/: compliance.service.ts
orchestrator/src/events/: events.gateway.ts  events.module.ts  events.service.spec.ts  events.service.ts  soroban-listener.service.ts  trade-event.entity.ts
orchestrator/src/soroban/: soroban.service.ts
orchestrator/src/trades/: trade.entity.ts  trades.controller.ts  trades.module.ts  trades.service.spec.ts  trades.service.ts
scripts/: deploy-mainnet.sh  deploy-testnet.sh
(+12 files in other folders)
